--- a/workflows/Knowledge Graph - TheAIAutomators - SOTA RAG Sub-workflow - v1.1 Blueprint.json
+++ b/workflows/Knowledge Graph - TheAIAutomators - SOTA RAG Sub-workflow - v1.1 Blueprint.json
@@ -1,7 +1,652 @@
 {
-  "active": false,
-  "activeVersion": null,
-  "activeVersionId": null,
+  "active": true,
+  "activeVersion": {
+    "updatedAt": "2025-12-03T09:47:01.401Z",
+    "createdAt": "2025-12-03T09:47:01.401Z",
+    "versionId": "9700b709-e657-4af1-ab68-a807deefd790",
+    "workflowId": "Vl4LsdTX98EYFzix",
+    "nodes": [
+      {
+        "parameters": {
+          "workflowInputs": {
+            "values": [
+              {
+                "name": "record_manager_item_json",
+                "type": "object"
+              },
+              {
+                "name": "record_manager_item_json_hash"
+              },
+              {
+                "name": "new_hash"
+              },
+              {
+                "name": "doc_id"
+              },
+              {
+                "name": "text"
+              },
+              {
+                "name": "supabase_row_id",
+                "type": "number"
+              },
+              {
+                "name": "graph_id"
+              }
+            ]
+          }
+        },
+        "type": "n8n-nodes-base.executeWorkflowTrigger",
+        "typeVersion": 1.1,
+        "position": [
+          -192,
+          688
+        ],
+        "id": "f074dbf1-baf9-4662-a7e7-8da3e5e74611",
+        "name": "When Executed by Another Workflow"
+      },
+      {
+        "parameters": {
+          "method": "POST",
+          "url": "={{ $('Set Data').item.json.lightrag_url }}/documents/text ",
+          "authentication": "genericCredentialType",
+          "genericAuthType": "httpHeaderAuth",
+          "sendBody": true,
+          "specifyBody": "json",
+          "jsonBody": "={\n  \"file_source\": \"{{ $('When Executed by Another Workflow').item.json.doc_id }}\",\n  \"text\": {{ JSON.stringify($('When Executed by Another Workflow').item.json.text) }}\n}",
+          "options": {}
+        },
+        "type": "n8n-nodes-base.httpRequest",
+        "typeVersion": 4.2,
+        "position": [
+          1712,
+          656
+        ],
+        "id": "f629f209-31a6-4f73-b11a-f62f291b0452",
+        "name": "Insert Into Knowledge Graph",
+        "retryOnFail": true
+      },
+      {
+        "parameters": {
+          "url": "={{ $('Set Data').item.json.lightrag_url }}/documents",
+          "authentication": "genericCredentialType",
+          "genericAuthType": "httpHeaderAuth",
+          "options": {}
+        },
+        "type": "n8n-nodes-base.httpRequest",
+        "typeVersion": 4.2,
+        "position": [
+          2224,
+          656
+        ],
+        "id": "1c2eae42-0da7-45c5-b342-f4791e72fc2e",
+        "name": "Fetch Documents",
+        "retryOnFail": true
+      },
+      {
+        "parameters": {
+          "jsCode": "// Loop over input items and search for document by file_path\nfor (const item of $input.all()) {\n  // Set your target file path here - you can modify this or make it dynamic\n  const targetFilePath = $('When Executed by Another Workflow').first().json.doc_id; // Change this to your desired file path\n  \n  // Alternative: Get file_path from a parameter or previous node\n  // const targetFilePath = $parameter[\"file_path\"]; // If using a parameter\n  // const targetFilePath = item.json.searchFilePath; // If coming from previous node\n  \n  // Get the statuses object\n  const statuses = item.json.statuses;\n  \n  let foundId = null;\n  let foundDocument = null;\n  \n  // Loop through all status keys dynamically (PENDING, PROCESSED, etc.)\n  for (const statusKey in statuses) {\n    const documentsArray = statuses[statusKey];\n    \n    // Make sure it's an array before looping\n    if (Array.isArray(documentsArray)) {\n      // Loop through each document in this status array\n      for (const document of documentsArray) {\n        if (document.file_path === targetFilePath) {\n          foundId = document.id;\n          foundDocument = document;\n          break;\n        }\n      }\n    }\n    \n    // If we found it, break out of the outer loop too\n    if (foundId) {\n      break;\n    }\n  }\n  \n  // Add the results to the item\n  item.json.foundDocumentId = foundId;\n  item.json.foundDocument = foundDocument; // Optional: include full document object\n  item.json.searchedFilePath = targetFilePath; // Optional: track what was searched\n}\n\nreturn $input.all();"
+        },
+        "type": "n8n-nodes-base.code",
+        "typeVersion": 2,
+        "position": [
+          2448,
+          656
+        ],
+        "id": "9c611901-9111-4b33-9e7f-95e5b61633f1",
+        "name": "Get ID"
+      },
+      {
+        "parameters": {
+          "rules": {
+            "values": [
+              {
+                "conditions": {
+                  "options": {
+                    "caseSensitive": true,
+                    "leftValue": "",
+                    "typeValidation": "strict",
+                    "version": 2
+                  },
+                  "conditions": [
+                    {
+                      "leftValue": "={{ $json.record_manager_item_json }}",
+                      "rightValue": 0,
+                      "operator": {
+                        "type": "object",
+                        "operation": "empty",
+                        "singleValue": true
+                      },
+                      "id": "ad01f150-f021-454c-aa13-eea5b26c2cba"
+                    }
+                  ],
+                  "combinator": "and"
+                }
+              },
+              {
+                "conditions": {
+                  "options": {
+                    "caseSensitive": true,
+                    "leftValue": "",
+                    "typeValidation": "strict",
+                    "version": 2
+                  },
+                  "conditions": [
+                    {
+                      "id": "dcd400bc-0b91-4c30-81bd-da402e4a2730",
+                      "leftValue": "={{ $('When Executed by Another Workflow').item.json.record_manager_item_json_hash }}",
+                      "rightValue": "={{ $('When Executed by Another Workflow').item.json.new_hash }}",
+                      "operator": {
+                        "type": "string",
+                        "operation": "equals",
+                        "name": "filter.operator.equals"
+                      }
+                    }
+                  ],
+                  "combinator": "and"
+                }
+              },
+              {
+                "conditions": {
+                  "options": {
+                    "caseSensitive": true,
+                    "leftValue": "",
+                    "typeValidation": "strict",
+                    "version": 2
+                  },
+                  "conditions": [
+                    {
+                      "id": "ca0c7ef8-09f9-4424-947b-8469b1ed8cac",
+                      "leftValue": "={{ $('When Executed by Another Workflow').item.json.record_manager_item_json_hash }}",
+                      "rightValue": "={{ $('When Executed by Another Workflow').item.json.new_hash }}",
+                      "operator": {
+                        "type": "string",
+                        "operation": "notEquals"
+                      }
+                    }
+                  ],
+                  "combinator": "and"
+                }
+              }
+            ]
+          },
+          "options": {
+            "allMatchingOutputs": false
+          }
+        },
+        "type": "n8n-nodes-base.switch",
+        "typeVersion": 3.2,
+        "position": [
+          304,
+          672
+        ],
+        "id": "5fb0e510-0851-45cb-8d1d-a944594bf048",
+        "name": "Handle Graph Updates",
+        "alwaysOutputData": false
+      },
+      {
+        "parameters": {
+          "operation": "update",
+          "tableId": "record_manager_v2",
+          "filters": {
+            "conditions": [
+              {
+                "keyName": "id",
+                "condition": "eq",
+                "keyValue": "={{ $('When Executed by Another Workflow').item.json.supabase_row_id }}"
+              }
+            ]
+          },
+          "fieldsUi": {
+            "fieldValues": [
+              {
+                "fieldId": "graph_id",
+                "fieldValue": "={{ $json.foundDocumentId }}"
+              }
+            ]
+          }
+        },
+        "type": "n8n-nodes-base.supabase",
+        "typeVersion": 1,
+        "position": [
+          2688,
+          656
+        ],
+        "id": "84cab024-90e4-49e2-a1a7-62945e5f3cf4",
+        "name": "Update our Record Manager1",
+        "alwaysOutputData": true,
+        "retryOnFail": true
+      },
+      {
+        "parameters": {
+          "amount": 1
+        },
+        "type": "n8n-nodes-base.wait",
+        "typeVersion": 1.1,
+        "position": [
+          2000,
+          656
+        ],
+        "id": "74dd49a1-497b-4a37-bb81-30b1297bb788",
+        "name": "Wait",
+        "webhookId": "3220a753-305b-42b4-b266-afc8912e1a09"
+      },
+      {
+        "parameters": {
+          "method": "DELETE",
+          "url": "={{ $('Set Data').item.json.lightrag_url }}/documents/delete_document",
+          "authentication": "genericCredentialType",
+          "genericAuthType": "httpHeaderAuth",
+          "sendBody": true,
+          "specifyBody": "json",
+          "jsonBody": "={\n  \"doc_ids\": [\n    \"{{ $('When Executed by Another Workflow').item.json.graph_id}}\"\n  ],\n  \"delete_file\": true\n}",
+          "options": {}
+        },
+        "type": "n8n-nodes-base.httpRequest",
+        "typeVersion": 4.2,
+        "position": [
+          832,
+          1072
+        ],
+        "id": "769a4758-e2fd-4ebe-b161-0ad314de49b7",
+        "name": "Delete from Knowledge Graph",
+        "retryOnFail": true
+      },
+      {
+        "parameters": {
+          "url": "={{ $('Set Data').item.json.lightrag_url }}/documents/pipeline_status",
+          "authentication": "genericCredentialType",
+          "genericAuthType": "httpHeaderAuth",
+          "options": {}
+        },
+        "type": "n8n-nodes-base.httpRequest",
+        "typeVersion": 4.2,
+        "position": [
+          1248,
+          1072
+        ],
+        "id": "b05b3cdb-279a-4b21-acad-596dbc808a1c",
+        "name": "Check Pipeline Status",
+        "retryOnFail": true
+      },
+      {
+        "parameters": {
+          "amount": 2
+        },
+        "type": "n8n-nodes-base.wait",
+        "typeVersion": 1.1,
+        "position": [
+          1056,
+          1072
+        ],
+        "id": "eae10d71-93bc-495a-b770-112cdee41e2f",
+        "name": "Wait1",
+        "webhookId": "293667d7-cbc0-47c0-9aa5-da9a26bb9221"
+      },
+      {
+        "parameters": {
+          "conditions": {
+            "options": {
+              "caseSensitive": true,
+              "leftValue": "",
+              "typeValidation": "strict",
+              "version": 2
+            },
+            "conditions": [
+              {
+                "id": "012c16d2-28ca-40e3-9172-a98f8f748957",
+                "leftValue": "={{ $json.busy }}",
+                "rightValue": "false",
+                "operator": {
+                  "type": "boolean",
+                  "operation": "false",
+                  "singleValue": true
+                }
+              }
+            ],
+            "combinator": "and"
+          },
+          "options": {}
+        },
+        "type": "n8n-nodes-base.if",
+        "typeVersion": 2.2,
+        "position": [
+          1472,
+          1072
+        ],
+        "id": "0d6ff8e3-4f89-4909-b0bf-3429ad0d345e",
+        "name": "If Deleted"
+      },
+      {
+        "parameters": {
+          "assignments": {
+            "assignments": [
+              {
+                "id": "17187342-26a5-4c05-875b-1a814b8cefbd",
+                "name": "lightrag_url",
+                "value": "<ADD URL>",
+                "type": "string"
+              }
+            ]
+          },
+          "includeOtherFields": true,
+          "options": {}
+        },
+        "type": "n8n-nodes-base.set",
+        "typeVersion": 3.4,
+        "position": [
+          64,
+          688
+        ],
+        "id": "b58fd838-bf11-4434-8690-27c5ac07087c",
+        "name": "Set Data"
+      },
+      {
+        "parameters": {
+          "content": "@[youtube](EUG65dIY-2k)",
+          "height": 272,
+          "width": 464,
+          "color": 7
+        },
+        "type": "n8n-nodes-base.stickyNote",
+        "typeVersion": 1,
+        "position": [
+          -208,
+          240
+        ],
+        "id": "2d23fc47-8c36-4de8-81bb-bfd36a6c67d8",
+        "name": "Sticky Note5"
+      },
+      {
+        "parameters": {
+          "content": "[![The AI Automators](https://www.theaiautomators.com/wp-content/uploads/2025/03/gray-logo.png)](https://www.theaiautomators.com/)",
+          "height": 188,
+          "width": 460,
+          "color": 7
+        },
+        "type": "n8n-nodes-base.stickyNote",
+        "typeVersion": 1,
+        "position": [
+          -208,
+          32
+        ],
+        "id": "edfd9032-b3a7-4120-863f-d4d29e659b94",
+        "name": "Sticky Note"
+      },
+      {
+        "parameters": {
+          "content": "## TODO\n### Add LightRAG URL without the trailing slash\n",
+          "height": 284,
+          "width": 232
+        },
+        "type": "n8n-nodes-base.stickyNote",
+        "typeVersion": 1,
+        "position": [
+          0,
+          576
+        ],
+        "id": "1be087af-5c6d-4db2-b6a8-f2ac331404e4",
+        "name": "Sticky Note22"
+      },
+      {
+        "parameters": {
+          "conditions": {
+            "options": {
+              "caseSensitive": true,
+              "leftValue": "",
+              "typeValidation": "strict",
+              "version": 2
+            },
+            "conditions": [
+              {
+                "id": "3d022e79-b19a-4d4b-8e64-eeea2d7500a5",
+                "leftValue": "={{ $json.record_manager_item_json.status }}",
+                "rightValue": "complete",
+                "operator": {
+                  "type": "string",
+                  "operation": "equals",
+                  "name": "filter.operator.equals"
+                }
+              },
+              {
+                "id": "2a5fdcd6-162b-4f6b-ae1a-4b808619ef18",
+                "leftValue": "={{ $json.record_manager_item_json.status }}",
+                "rightValue": "",
+                "operator": {
+                  "type": "string",
+                  "operation": "empty",
+                  "singleValue": true
+                }
+              }
+            ],
+            "combinator": "or"
+          },
+          "options": {}
+        },
+        "type": "n8n-nodes-base.if",
+        "typeVersion": 2.2,
+        "position": [
+          576,
+          736
+        ],
+        "id": "e2e96ccf-9f75-4188-9230-2737e9e6d7a9",
+        "name": "If Record is Complete"
+      },
+      {
+        "parameters": {
+          "conditions": {
+            "options": {
+              "caseSensitive": true,
+              "leftValue": "",
+              "typeValidation": "strict",
+              "version": 2
+            },
+            "conditions": [
+              {
+                "id": "748bb390-3346-4647-8556-81258adf90c5",
+                "leftValue": "={{ $json.record_manager_item_json.graph_id }}",
+                "rightValue": "",
+                "operator": {
+                  "type": "boolean",
+                  "operation": "notExists",
+                  "singleValue": true
+                }
+              }
+            ],
+            "combinator": "and"
+          },
+          "options": {}
+        },
+        "type": "n8n-nodes-base.if",
+        "typeVersion": 2.2,
+        "position": [
+          784,
+          800
+        ],
+        "id": "0c2cd056-4aeb-4f63-a5d6-95f47afc1d48",
+        "name": "If Graph ID Set"
+      }
+    ],
+    "connections": {
+      "Insert Into Knowledge Graph": {
+        "main": [
+          [
+            {
+              "node": "Wait",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Fetch Documents": {
+        "main": [
+          [
+            {
+              "node": "Get ID",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Get ID": {
+        "main": [
+          [
+            {
+              "node": "Update our Record Manager1",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Handle Graph Updates": {
+        "main": [
+          [
+            {
+              "node": "Insert Into Knowledge Graph",
+              "type": "main",
+              "index": 0
+            }
+          ],
+          [
+            {
+              "node": "If Record is Complete",
+              "type": "main",
+              "index": 0
+            }
+          ],
+          [
+            {
+              "node": "Delete from Knowledge Graph",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Wait": {
+        "main": [
+          [
+            {
+              "node": "Fetch Documents",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Delete from Knowledge Graph": {
+        "main": [
+          [
+            {
+              "node": "Wait1",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Check Pipeline Status": {
+        "main": [
+          [
+            {
+              "node": "If Deleted",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Wait1": {
+        "main": [
+          [
+            {
+              "node": "Check Pipeline Status",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "If Deleted": {
+        "main": [
+          [
+            {
+              "node": "Insert Into Knowledge Graph",
+              "type": "main",
+              "index": 0
+            }
+          ],
+          [
+            {
+              "node": "Wait1",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "When Executed by Another Workflow": {
+        "main": [
+          [
+            {
+              "node": "Set Data",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "Set Data": {
+        "main": [
+          [
+            {
+              "node": "Handle Graph Updates",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "If Record is Complete": {
+        "main": [
+          [],
+          [
+            {
+              "node": "If Graph ID Set",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      },
+      "If Graph ID Set": {
+        "main": [
+          [
+            {
+              "node": "Insert Into Knowledge Graph",
+              "type": "main",
+              "index": 0
+            }
+          ],
+          [
+            {
+              "node": "Delete from Knowledge Graph",
+              "type": "main",
+              "index": 0
+            }
+          ]
+        ]
+      }
+    },
+    "authors": "system migration",
+    "name": null,
+    "description": null,
+    "autosaved": false
+  },
+  "activeVersionId": "9700b709-e657-4af1-ab68-a807deefd790",
   "connections": {
     "Insert Into Knowledge Graph": {
       "main": [
