--- a/workflows/booking_Lookup_Appointment.json
+++ b/workflows/booking_Lookup_Appointment.json
@@ -1,76 +1,7 @@
 {
-  "active": true,
-  "activeVersion": {
-    "updatedAt": "2025-12-17T10:18:18.841Z",
-    "createdAt": "2025-12-17T10:18:18.841Z",
-    "versionId": "c5030ba6-3824-49e5-9bf8-a141ba3b9c86",
-    "workflowId": "7qAEoVZ0gvZHyPWp",
-    "nodes": [
-      {
-        "parameters": {
-          "workflowInputs": {
-            "values": [
-              {
-                "name": "afterTime"
-              },
-              {
-                "name": "beforeTime"
-              }
-            ]
-          }
-        },
-        "type": "n8n-nodes-base.executeWorkflowTrigger",
-        "typeVersion": 1.1,
-        "position": [
-          0,
-          0
-        ],
-        "id": "15f8b827-a0ee-4165-838b-a74a17108f30",
-        "name": "When Executed by Another Workflow"
-      },
-      {
-        "parameters": {
-          "operation": "getAll",
-          "calendar": {
-            "__rl": true,
-            "value": "nateherk88@gmail.com",
-            "mode": "list",
-            "cachedResultName": "nateherk88@gmail.com"
-          },
-          "returnAll": true,
-          "timeMin": "={{ $json.afterTime }}",
-          "timeMax": "={{ $json.beforeTime }}",
-          "options": {}
-        },
-        "type": "n8n-nodes-base.googleCalendar",
-        "typeVersion": 1.3,
-        "position": [
-          208,
-          0
-        ],
-        "id": "6e795125-1c25-41d6-92b7-5605a62a2d89",
-        "name": "Get many events"
-      }
-    ],
-    "connections": {
-      "When Executed by Another Workflow": {
-        "main": [
-          [
-            {
-              "node": "Get many events",
-              "type": "main",
-              "index": 0
-            }
-          ]
-        ]
-      }
-    },
-    "authors": "Alex Guajardo",
-    "name": null,
-    "description": null,
-    "autosaved": false
-  },
-  "activeVersionId": "c5030ba6-3824-49e5-9bf8-a141ba3b9c86",
+  "active": false,
+  "activeVersion": null,
+  "activeVersionId": null,
   "connections": {
     "When Executed by Another Workflow": {
       "main": [
